log/build_2022-04-17_03-52-54/socketcan_interface/stdout.log

[0/2] Building CXX object CMakeFiles/socketcan_interface_node.dir/src/socketcan_interface_node.cpp.o[K
[1/2] Building CXX object CMakeFiles/socketcan_interface_node.dir/src/socketcan_interface_node.cpp.o[K
[31mFAILED: [0mCMakeFiles/socketcan_interface_node.dir/src/socketcan_interface_node.cpp.o 
/usr/bin/c++  -DDEFAULT_RMW_IMPLEMENTATION=rmw_cyclonedds_cpp -DRCUTILS_ENABLE_FAULT_INJECTION -DSOCKETCAN_INTERFACE_LIBRARY -I/home/ryuzot/ros2_ws/src/socketcan_interface/include -isystem /home/ryuzot/ros2_ws/install/socketcan_interface_msg/include -isystem /opt/ros/galactic/include -Wall -Wextra -Wpedantic -std=gnu++17 -MD -MT CMakeFiles/socketcan_interface_node.dir/src/socketcan_interface_node.cpp.o -MF CMakeFiles/socketcan_interface_node.dir/src/socketcan_interface_node.cpp.o.d -o CMakeFiles/socketcan_interface_node.dir/src/socketcan_interface_node.cpp.o -c /home/ryuzot/ros2_ws/src/socketcan_interface/src/socketcan_interface_node.cpp
/home/ryuzot/ros2_ws/src/socketcan_interface/src/socketcan_interface_node.cpp: In constructor ‘socketcan_interface::SocketcanInterface::SocketcanInterface(const string&, const rclcpp::NodeOptions&)’:
/home/ryuzot/ros2_ws/src/socketcan_interface/src/socketcan_interface_node.cpp:11:108: error: no matching function for call to ‘rclcpp::Node::Node()’
   11 |     SocketcanInterface::SocketcanInterface(const std::string &node_name, const rclcpp::NodeOptions &options) {
      |                                                                                                            ^
In file included from /opt/ros/galactic/include/rclcpp/executors/single_threaded_executor.hpp:28,
                 from /opt/ros/galactic/include/rclcpp/executors.hpp:22,
                 from /opt/ros/galactic/include/rclcpp/rclcpp.hpp:156,
                 from /home/ryuzot/ros2_ws/src/socketcan_interface/src/socketcan_interface_node.cpp:4:
/opt/ros/galactic/include/rclcpp/node.hpp:1302:3: note: candidate: ‘rclcpp::Node::Node(const rclcpp::Node&, const string&)’
 1302 |   Node(
      |   ^~~~
/opt/ros/galactic/include/rclcpp/node.hpp:1302:3: note:   candidate expects 2 arguments, 0 provided
/opt/ros/galactic/include/rclcpp/node.hpp:101:12: note: candidate: ‘rclcpp::Node::Node(const string&, const string&, const rclcpp::NodeOptions&)’
  101 |   explicit Node(
      |            ^~~~
/opt/ros/galactic/include/rclcpp/node.hpp:101:12: note:   candidate expects 3 arguments, 0 provided
/opt/ros/galactic/include/rclcpp/node.hpp:89:12: note: candidate: ‘rclcpp::Node::Node(const string&, const rclcpp::NodeOptions&)’
   89 |   explicit Node(
      |            ^~~~
/opt/ros/galactic/include/rclcpp/node.hpp:89:12: note:   candidate expects 2 arguments, 0 provided
/home/ryuzot/ros2_ws/src/socketcan_interface/src/socketcan_interface_node.cpp:11:63: warning: unused parameter ‘node_name’ [-Wunused-parameter]
   11 |     SocketcanInterface::SocketcanInterface(const std::string &node_name, const rclcpp::NodeOptions &options) {
      |                                            ~~~~~~~~~~~~~~~~~~~^~~~~~~~~
/home/ryuzot/ros2_ws/src/socketcan_interface/src/socketcan_interface_node.cpp:11:101: warning: unused parameter ‘options’ [-Wunused-parameter]
   11 |     SocketcanInterface::SocketcanInterface(const std::string &node_name, const rclcpp::NodeOptions &options) {
      |                                                                          ~~~~~~~~~~~~~~~~~~~~~~~~~~~^~~~~~~
ninja: build stopped: subcommand failed.
